--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
 
     compile 'com.google.firebase:firebase-core:11.8.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
